fixed a bug that was not showing singular blog posts

--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   gap: 100px;
+  justify-content: center;
 }
 
 .posts {
@@ -12,6 +13,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  max-width: 600px;
 }
 
 .post {
